# CRC_mission_control

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: grazyna_app_config.yaml
configs/hardware_configs/: 3ttk_sac.yaml  agatka.yaml  bozenka_tst.yaml  calibration.yaml  develop.yaml  trb.yaml  trb_27.10.yaml
core/: data_types.py  logger.py  serial_manager.py  telemetry.py
docs/release_tests/: README.md
rocket_ground_station/: headless.py  main.py
rocket_ground_station/components/: __init__.py  arming_buttons.py  arming_switch.py  connection_button.py  connection_switch.py  device_displayer.py  device_selector.py  frame_logger.py  hydro_visualisation.py  label.py  live_plot.py  menu.py  plot_container.py  selective_arming_button.py  snapshot_manager.py  space_ack_light.py  space_checkbox.py  space_dropdown.py  space_dropdown_item.py  space_switch.py  space_text_field.py  space_tooltip.py  sync_indicator_button.py
rocket_ground_station/core/: __init__.py  configs.py  exceptions.py  sequences.py
rocket_ground_station/layouts/: arming_buttons.kv  connection_button.kv  device_displayer.kv  device_selector.kv  frame_logger.kv  groundstation.kv  hydro_visualisation_3ttk.kv  hydro_visualisation_trb.kv  labels.kv  live_plot.kv  menu.kv  plot_container.kv  selective_arming_button.kv  space_ack_light.kv  space_checkbox.kv  space_dropdown.kv  space_dropdown_item.kv  space_scroll_view.kv  space_switch.kv  (+2 more)
test/: simulator.py
ui/: components.py  layout.py  navball.py  theme.py
workspace/: .develop_pylint_config  settings.json
(+173 files in other folders)
